--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   },
   "dependencies": {
     "gatsby": "^2.16.1",
+    "gatsby-image": "^2.2.31",
+    "gatsby-plugin-sharp": "^2.2.37",
+    "gatsby-source-filesystem": "^2.1.36",
+    "gatsby-transformer-sharp": "^2.3.3",
     "react": "^16.10.2",
     "react-dom": "^16.10.2"
   },
