--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-source-filesystem": "^2.1.36",
     "gatsby-transformer-sharp": "^2.3.3",
     "react": "^16.10.2",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2"
   },
   "devDependencies": {
