--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "gatsby": "^2.16.1",
     "gatsby-image": "^2.2.31",
     "gatsby-plugin-sharp": "^2.2.37",
     "gatsby-source-filesystem": "^2.1.36",
     "gatsby-transformer-sharp": "^2.3.3",
     "react": "^16.10.2",
-    "react-bootstrap": "^1.0.0-beta.14",
+    "react-bootstrap": "^1.0.0-beta.15",
     "react-dom": "^16.10.2"
   },
   "devDependencies": {
