--- a/package.json
+++ b/package.json
@@ -13,15 +13,21 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.5.1",
+    "@mdx-js/react": "^1.5.1",
     "bootstrap": "^4.3.1",
-    "gatsby": "^2.16.1",
+    "gatsby": "^2.18.6",
     "gatsby-image": "^2.2.31",
-    "gatsby-plugin-sharp": "^2.2.37",
+    "gatsby-plugin-mdx": "^1.0.59",
+    "gatsby-plugin-sharp": "^2.3.5",
+    "gatsby-remark-images": "^3.1.35",
+    "gatsby-remark-prismjs": "^3.3.25",
     "gatsby-source-filesystem": "^2.1.36",
     "gatsby-transformer-sharp": "^2.3.3",
-    "react": "^16.10.2",
+    "prismjs": "^1.17.1",
+    "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.15",
-    "react-dom": "^16.10.2"
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
