--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "@mdx-js/mdx": "^1.5.1",
     "@mdx-js/react": "^1.5.1",
     "bootstrap": "^4.3.1",
-    "gatsby": "^2.18.6",
+    "gatsby": "^2.18.17",
     "gatsby-image": "^2.2.31",
     "gatsby-plugin-mdx": "^1.0.59",
     "gatsby-plugin-sharp": "^2.3.5",
