--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby": "^2.18.17",
     "gatsby-image": "^2.2.31",
     "gatsby-plugin-mdx": "^1.0.59",
+    "gatsby-plugin-react-helmet": "^3.1.22",
     "gatsby-plugin-sharp": "^2.3.5",
     "gatsby-remark-images": "^3.1.35",
     "gatsby-remark-prismjs": "^3.3.25",
@@ -31,7 +32,8 @@
     "prismjs": "^1.17.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.15",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
